--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <a href="https://jackyhuynh.github.io/truc_online_portfolio/" onclick="javascript:void window.open('https://jackyhuynh.github.io/truc_online_portfolio/','1638650871548','width=900,height=700,toolbar=0,menubar=0,location=0,status=1,scrollbars=1,resizable=1,left=0,top=0');return false;">Truc Portfolio.</a>
                     </p>
                 </div>
-                <!--End skill row 4 -->
+                <!--End skill row 3 -->
 
                 <div class="skill-row">
                     <img class="left-img" src="images/ML.jpg" alt="ML-img">
@@ -96,18 +96,18 @@
                     <h3>What else you may want to know:</h3>
                     <p>
                         <ul>
-                            <li>I am an <span class="pro">IT</span> Professional: I love to inspect hardware and software. I used to build my own servers and
-                            networking system for me, and my friends businesses.</li>
+                            <li>I am an <span class="pro">IT</span> Professional: I love to inspect hardware and software. I used to build my own physical servers and
+                            networking system for me, and my friends.</li>
                             <li>I am a Certified <span class="pro">Diesel Mechanic</span>: I serve as a diesel mechanic in the US Army.</li>
                             <li>I am a Certified <span class="pro">Nails Tech</span>: I love to chat with people about nails.</li>
                             <li>I am a Day <span class="pro">Trader</span>: before designing 7 Figures Traders community, I was a day trader.</li>
                             <li>I am a Professional <span class="pro">Builder</span>: I used to flip house with my friends.</li>
-                            <li>In the end, I am an <span class="pro1">entrepreneur</span> , I turn every opportunity in to action.</li>
+                            <li>In the end, I am an <span class="pro1">entrepreneur</span> , I turn my opportunity in to action.</li>
                         </ul>
                     </p>
 
                 </div>
-
+                <!--End skill row 5-->
             </div>
             <!--End skill block -->
 
