--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
-                <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
         <!--Go to https://fonts.google.com/specimen/Montserrat?query=montse to get the font create-->
 
@@ -18,7 +18,7 @@
             <img class="top_cloud"  src="images/cloud.png" alt="cloud-img">
             <h1>I'm Truc Huynh.</h1>
 
-            <h2>a <span class="pro">pro</span>grammer.</h2>
+            <h2>a <span class="pro">DeV</span>eloper.</h2>
             <img class="bottom_cloud" src="images/cloud.png" alt="cloud-img">
             <img src="images/mountain.png" alt="mountain-img">
         </div>
@@ -93,7 +93,7 @@
                 <!--End skill row 4 -->
 
                 <div class="skill-row">
-                    <h3>What else you may want to know:</h3>
+                    <h3>Other skills:</h3>
                     <p>
                         <ul>
                             <li>I am an <span class="pro">IT</span> Professional: I love to inspect hardware and software. I used to build my own physical servers and
