--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Truc Huynh - a programmer</title>
+        <title>Personal Portfolio | Truc</title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="icon" href="truc_icon.ico">
         <link rel="preconnect" href="https://fonts.googleapis.com">
