--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
                         <ul>
                             <li>I am an <span class="pro">IT</span> Professional: I love to inspect hardware and software. I used to build my own physical servers and
                             networking system for me, and my friends.</li>
-                            <li>I am a Certified <span class="pro">Diesel Mechanic</span>: I serve as a diesel mechanic in the US Army.</li>
                             <li>I am a Certified <span class="pro">Nails Tech</span>: I love to chat with people about nails.</li>
-                            <li>I am a Day <span class="pro">Trader</span>: before designing 7 Figures Traders community, I was a day trader.</li>
-                            <li>I am a Professional <span class="pro">Builder</span>: I used to flip house with my friends.</li>
+                            <li>I was a Certified <span class="pro">Diesel Mechanic</span>: I serve as a diesel mechanic in the US Army.</li>
+                            <li>I was a Day <span class="pro">Trader</span>: before designing 7 Figures Traders community, I was a day trader.</li>
+                            <li>I was a Professional <span class="pro">Builder</span>: I used to flip house with my friends.</li>
                             <li>In the end, I am an <span class="pro1">entrepreneur</span> , I turn my opportunity in to action.</li>
                         </ul>
                     </p>
