change in headers and add skills

--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
                 <img class="profile-img" src="images/profile1.jpg" alt="profile-img">
                 <h2>Hello.</h2>
                 <div class="bio-row">
-                    <p>⭐ In short, I am a full stack developer, a data enthusiastic, a US Army veteran, an entrepreneurs,
-                    a graduate research student, and a dad of 2 cool kids ⭐</p>
+                    <p>⭐I am a creative software engineer who is passionate about building impactful solutions that make a different in people's lives. I value communication and authentication at work place </p>
+                    <p>I have experience with many applications: infrastructure design, full-stack web development, custom API, cloud computing, CI/CD, windows application, and mobile development. I am also an experienced program manager, a data enthusiast, a US Army veteran, an entrepreneur, a graduate research student, and a dad of two kids.⭐</p>
+
                 </div>
             </div>
             <!--End profile block -->
@@ -41,6 +42,7 @@
                 <div class="skill-row">
                     <img class="right-img" src="images/computer.png" alt="computer-img">
                     <h3>Project & Program Manager</h3>
+                    <h2>Skills: software design, programming, budget planning, communication, project planning, and management</h2>
                     <p>I am also an experienced project/ program manager. So far, I have completed the
                         <a href="http://7figurestraders.com/index.php" onclick="javascript:void window.open('http://7figurestraders.com/index.php','1639147461258','width=700,height=900,toolbar=0,menubar=0,location=0,status=1,scrollbars=1,resizable=1,left=0,top=0');return false;">7 Figures Traders project</a>
                         (an online trading community)
@@ -48,7 +50,7 @@
                         (build a 4,000 sqft. store and design its business logic system), the VSO inventory tracking system project (build a physical and application tracking database for the US Army).
                         All of them were delivered on time and under budget.</p>
                 </div>
-                <!--End skill row 1 -->
+                <!--End skill row-->
 
                 <div class="skill-row">
                     <img class="left-img" src="images/data_science.png" alt="data-science-img">
@@ -64,7 +66,7 @@
                         My primary data science tools are data tidy skills, R, Python, SQL, and Spreadsheet.
                     </p>
                 </div>
-                <!--End skill row 2 -->
+                <!--End skill row-->
 
                 <div class="skill-row">
                     <img class="right-img" src="images/code.jpg" alt="code-img">
@@ -76,7 +78,7 @@
                         <a href="https://jackyhuynh.github.io/truc_business_portfolio/" onclick="javascript:void window.open('https://jackyhuynh.github.io/template_professional_portfolio/','1638650871548','width=900,height=700,toolbar=0,menubar=0,location=0,status=1,scrollbars=1,resizable=1,left=0,top=0');return false;">Truc Portfolio.</a>
                     </p>
                 </div>
-                <!--End skill row 3 -->
+                <!--End skill row-->
 
                 <div class="skill-row">
                     <img class="left-img" src="images/ML.jpg" alt="ML-img">
@@ -90,7 +92,7 @@
                         <a href="https://github.com/jackyhuynh" onclick="javascript:void window.open('https://github.com/jackyhuynh','1639149900254','width=700,height=900,toolbar=0,menubar=0,location=0,status=1,scrollbars=1,resizable=1,left=0,top=0');return false;">GitHub <i class="fa fa-github" aria-hidden="true"></i></a>
                     </p>
                 </div>
-                <!--End skill row 4 -->
+                <!--End skill row-->
 
                 <div class="skill-row">
                     <h3>Other skills:</h3>
@@ -107,7 +109,7 @@
                     </p>
 
                 </div>
-                <!--End skill row 5-->
+                <!--End skill row-->
             </div>
             <!--End skill block -->
 
