add new headers

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <img class="top_cloud"  src="images/cloud.png" alt="cloud-img">
             <h1>I'm Truc Huynh.</h1>
 
-            <h2>a <span class="pro">DeV</span>eloper.</h2>
+            <h2>a Software <span class="pro">DeV</span>eloper.</h2>
             <img class="bottom_cloud" src="images/cloud.png" alt="cloud-img">
             <img src="images/mountain.png" alt="mountain-img">
         </div>
@@ -29,8 +29,8 @@
                 <img class="profile-img" src="images/profile1.jpg" alt="profile-img">
                 <h2>Hello.</h2>
                 <div class="bio-row">
-                    <p>⭐I am a creative software engineer who is passionate about building impactful solutions that make a different in people's lives. I value communication and authentication at work place </p>
-                    <p>I have experience with many applications: infrastructure design, full-stack web development, custom API, cloud computing, CI/CD, windows application, and mobile development. I am also an experienced program manager, a data enthusiast, a US Army veteran, an entrepreneur, a graduate research student, and a dad of two kids.⭐</p>
+                    <p>⭐I am a creative software engineer who is passionate about building impactful solutions that make a different in people's lives. I value communication and authentication at work place ⭐</p>
+                    <p>⭐I have experience with many applications: infrastructure design, full-stack web development, custom API, cloud computing, CI/CD, windows application, and mobile development. I am also an experienced program manager, a data enthusiast, a US Army veteran, an entrepreneur, a graduate research student, and a dad of two COOL kids.⭐</p>
 
                 </div>
             </div>
@@ -42,7 +42,7 @@
                 <div class="skill-row">
                     <img class="right-img" src="images/computer.png" alt="computer-img">
                     <h3>Project & Program Manager</h3>
-                    <h2>Skills: software design, programming, budget planning, communication, project planning, and management</h2>
+                    <p>Skills: software design, programming, budget planning, communication, project planning, and management</p>
                     <p>I am also an experienced project/ program manager. So far, I have completed the
                         <a href="http://7figurestraders.com/index.php" onclick="javascript:void window.open('http://7figurestraders.com/index.php','1639147461258','width=700,height=900,toolbar=0,menubar=0,location=0,status=1,scrollbars=1,resizable=1,left=0,top=0');return false;">7 Figures Traders project</a>
                         (an online trading community)
