final update to website

--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
                 <img class="profile-img" src="images/profile1.jpg" alt="profile-img">
                 <h2>Hello.</h2>
                 <div class="bio-row">
-                    <p>⭐I am a creative software engineer who is passionate about building impactful solutions that make a different in people's lives. I value communication and authentication at work place ⭐</p>
-                    <p>⭐I have experience with many applications: infrastructure design, full-stack web development, custom API, cloud computing, CI/CD, windows application, and mobile development. I am also an experienced program manager, a data enthusiast, a US Army veteran, an entrepreneur, a graduate research student, and a dad of two COOL kids.⭐</p>
+                    <p>⭐I am a creative software engineer who is passionate about building impactful solutions that
+                        make a different in people's lives. I value communication and authentication at work place.⭐</p>
+                    <p>⭐I have experience with many applications: infrastructure design, full-stack web development,
+                        custom API, cloud computing, CI/CD, windows application, and mobile development.
+                        I am also an experienced program manager, a data enthusiast, a US Army veteran, an entrepreneur,
+                        a graduate research student, and a dad of two COOL kids.⭐</p>
 
                 </div>
             </div>
@@ -39,16 +43,28 @@
             <hr>
             <div class="skills">
                 <h2>My Skills.</h2>
+
                 <div class="skill-row">
-                    <img class="right-img" src="images/computer.png" alt="computer-img">
-                    <h3>Project & Program Manager</h3>
-                    <p>Skills: software design, programming, budget planning, communication, project planning, and management</p>
-                    <p>I am also an experienced project/ program manager. So far, I have completed the
-                        <a href="http://7figurestraders.com/index.php" onclick="javascript:void window.open('http://7figurestraders.com/index.php','1639147461258','width=700,height=900,toolbar=0,menubar=0,location=0,status=1,scrollbars=1,resizable=1,left=0,top=0');return false;">7 Figures Traders project</a>
-                        (an online trading community)
-                        <a href="http://luxenailsgroup.net/" onclick="javascript:void window.open('http://luxenailsgroup.net/','1639147461258','width=700,height=900,toolbar=0,menubar=0,location=0,status=1,scrollbars=1,resizable=1,left=0,top=0');return false;">the Luxe Nails project</a>
-                        (build a 4,000 sqft. store and design its business logic system), the VSO inventory tracking system project (build a physical and application tracking database for the US Army).
-                        All of them were delivered on time and under budget.</p>
+                    <img class="right-img" src="images/code.jpg" alt="code-img">
+                    <h3>Software Design & Development</h3>
+                    <p><span class="pro">Skills</span>: software design, programming, communication, facilitation, Python, C#, CI/CD, source control management tools, and DevSecOPs best practice.</p>
+                    <p>I started working as a graphic designer in 2010 in Vietnam. However, I was only introduced to web
+                        development at De Anza College (2013) while designing a client-server architect using Apache Tomcat and Java.
+                        After that, I felt in love with web development and UI design. I have applied my web development
+                        skills to build many websites for my projects and researches. I am comfortable both in front-end and back-end.
+                        My dev-tools are software design, prototype, Java, Python, database(PostGreSQL, MySQL), HTML, JavaScript, CSS, image editor, C#, gitlab, git, bash,
+                        automation . Some of my recent projects are :
+                        <a href="https://github.com/jackyhuynh/User_Banking_and_Expense_Analyst" onclick="javascript:void window.open('https://github.com/jackyhuynh/User_Banking_and_Expense_Analyst','1638650871548','width=900,height=700,toolbar=0,menubar=0,location=0,status=1,scrollbars=1,resizable=1,left=0,top=0');return false;">User Banking & Expense Analyst</a>,
+                        <a href="https://jackyhuynh.github.io/truc_business_portfolio/" onclick="javascript:void window.open('https://jackyhuynh.github.io/template_professional_portfolio/','1638650871548','width=900,height=700,toolbar=0,menubar=0,location=0,status=1,scrollbars=1,resizable=1,left=0,top=0');return false;">Truc Portfolio.</a>, and many other projects on GitHub.</p>
+                    <p>In 2021, I start my own start up the <a href="http://7figurestraders.com/index.php" onclick="javascript:void window.open('http://7figurestraders.com/index.php','1638650871548','width=900,height=700,toolbar=0,menubar=0,location=0,status=1,scrollbars=1,resizable=1,left=0,top=0');return false;">
+                    7 Figures Traders</a> which is a web app feature secure communication, trade analyst & recommendation, and built-in training material.</p>
+                     <p>In 2023, I pick up CI/CD and cloud computing (AWS) at the
+                        <a href="https://www.linkedin.com/company/army-software-factory?trk=organization_guest_main-feed-card_feed-actor-name" onclick="javascript:void window.open('https://www.linkedin.com/company/army-software-factory?trk=organization_guest_main-feed-card_feed-actor-name','1638650871548','width=900,height=700,toolbar=0,menubar=0,location=0,status=1,scrollbars=1,resizable=1,left=0,top=0');return false;">Army Software Engineer</a>.
+                        I experience many challenges and work with many interesting people that help me accelerate my skills and personality.
+                        Some of the achievements include: Building new cloud infrastructure from ground up, creating maintainable CI/CD pipelines (gitlab, bash, automation, and python),
+                        analyst and improve legacy application (C# thick application, React, Web server), and many other application that support the Army and DOD missions.
+                        However, the most important value for me is that the opportunity to work with awesome coworkers and great leadership.
+                    </p>
                 </div>
                 <!--End skill row-->
 
@@ -69,14 +85,15 @@
                 <!--End skill row-->
 
                 <div class="skill-row">
-                    <img class="right-img" src="images/code.jpg" alt="code-img">
-                    <h3>Web Design & Development</h3>
-                    <p>I started working as a graphic designer in 2010 in Vietnam. However, I was only introduced to web development at De Anza College (2013) while designing a client-server architect using Apache Tomcat and Java. After that, I felt in love with web development and UI design. I have applied my web development skills to build many websites for my projects and researches. I am comfortable both in front-end and back-end. My tools for web development are prototype, Java, Python, MySQL, HTML, JavaScript, CSS, image editor. Some of my recent projects are :
-                        <a href="http://7figurestraders.com/index.php" onclick="javascript:void window.open('http://7figurestraders.com/index.php','1638650871548','width=900,height=700,toolbar=0,menubar=0,location=0,status=1,scrollbars=1,resizable=1,left=0,top=0');return false;">
-                            7 Figures Traders</a>,
-                        <a href="https://github.com/jackyhuynh/User_Banking_and_Expense_Analyst" onclick="javascript:void window.open('https://github.com/jackyhuynh/User_Banking_and_Expense_Analyst','1638650871548','width=900,height=700,toolbar=0,menubar=0,location=0,status=1,scrollbars=1,resizable=1,left=0,top=0');return false;">User Banking & Expense Analyst</a>,
-                        <a href="https://jackyhuynh.github.io/truc_business_portfolio/" onclick="javascript:void window.open('https://jackyhuynh.github.io/template_professional_portfolio/','1638650871548','width=900,height=700,toolbar=0,menubar=0,location=0,status=1,scrollbars=1,resizable=1,left=0,top=0');return false;">Truc Portfolio.</a>
-                    </p>
+                    <img class="right-img" src="images/computer.png" alt="computer-img">
+                    <h3>Project & Program Manager</h3>
+                    <p><span class="pro">Skills</span>: software design, programming, budget planning, communication, facilitation, project planning & management</p>
+                    <p>I am also an experienced project/ program manager. So far, I have completed the
+                        <a href="http://7figurestraders.com/index.php" onclick="javascript:void window.open('http://7figurestraders.com/index.php','1639147461258','width=700,height=900,toolbar=0,menubar=0,location=0,status=1,scrollbars=1,resizable=1,left=0,top=0');return false;">7 Figures Traders project</a>
+                        (an online trading community)
+                        <a href="http://luxenailsgroup.net/" onclick="javascript:void window.open('http://luxenailsgroup.net/','1639147461258','width=700,height=900,toolbar=0,menubar=0,location=0,status=1,scrollbars=1,resizable=1,left=0,top=0');return false;">the Luxe Nails project</a>
+                        (build a 4,000 sqft. store and design its business logic system), the VSO inventory tracking system project (build a physical and application tracking database for the US Army).
+                        All of them were delivered on time and under budget.</p>
                 </div>
                 <!--End skill row-->
 
