final update to website

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <a href="https://www.linkedin.com/company/army-software-factory?trk=organization_guest_main-feed-card_feed-actor-name" onclick="javascript:void window.open('https://www.linkedin.com/company/army-software-factory?trk=organization_guest_main-feed-card_feed-actor-name','1638650871548','width=900,height=700,toolbar=0,menubar=0,location=0,status=1,scrollbars=1,resizable=1,left=0,top=0');return false;">Army Software Engineer</a>.
                         I experience many challenges and work with many interesting people that help me accelerate my skills and personality.
                         Some of the achievements include: Building new cloud infrastructure from ground up, creating maintainable CI/CD pipelines (gitlab, bash, automation, and python),
-                        analyst and improve legacy application (C# thick application, React, Web server), and many other application that support the Army and DOD missions.
+                        analyst and improve legacy application (C# thick application, React, Web server), and building applications that support the Army and DOD missions.
                         However, the most important value for me is that the opportunity to work with awesome coworkers and great leadership.
                     </p>
                 </div>
