update profile pics

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <div class="middle-container">
             <div class="profile">
-                <img class="profile-img" src="images/profile1.jpg" alt="profile-img">
+                <img class="profile-img" src="images/truc.PNG" alt="profile-img">
                 <h2>Hello.</h2>
                 <div class="bio-row">
                     <p>⭐I am a creative software engineer who is passionate about building impactful solutions that
