--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="bio-row">
                     <p>⭐I am a creative software engineer who is passionate about building impactful solutions that
                         make a different in people's lives. I value communication and authentication at work place.⭐</p>
-                    <p>⭐I have experience with many applications: infrastructure design, full-stack web development,
+                    <p>⭐I have experience with many large scale platforms and systems: infrastructure design, full-stack web development,
                         custom API, cloud computing, CI/CD, windows application, and mobile development.
                         I am also an experienced program manager, a data enthusiast, a US Army veteran, an entrepreneur,
                         a graduate research student, and a dad of two COOL kids.⭐</p>
